Fixed bug #2082 'mysqldump converts "inf" to NULL' and added commands vertical_results and horisontal_results to client/mysqltest.c

client/mysqltest.c:
  added commands vertical_results and horisontal_results
mysql-test/r/insert.result:
  added test for bug #2082 'mysqldump converts "inf" to NULL'
mysql-test/t/insert.test:
  Fixed bug #2082 'mysqldump converts "inf" to NULL'
sql/field.cc:
  added test for Fixed bug #2082 'mysqldump converts "inf" to NULL'